creacion funcionalidad de boton actualizar y popup con inputs

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,15 +1,25 @@
-body {
+/*body {
     background-color: yellow;
-}
+}*/
 
-.red {
+/*.red {
     background-color: red;
-}
+}*/
 
 .blue {
-background-color: blue;
+    background-color: blue;
 }
 
 .error {
     color: red;
+}
+
+.popup-edit {
+    background-color: orange;
+    padding: 20px;
+}
+ 
+input, textarea {
+    display: block;
+    padding: 10px;
 }
