--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,20 @@
-/*body {
-    background-color: yellow;
-}*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #f4f4f4;
+    color: #333;
+}
+ 
+a {
+    text-decoration: none;
+    color: inherit; /* para heredar color de e.padre*/
+}
+
 
 /*.red {
     background-color: red;
@@ -18,8 +32,9 @@
     background-color: orange;
     padding: 20px;
 }
- 
-input, textarea {
+
+input,
+textarea {
     display: block;
     padding: 10px;
 }
