--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -5,7 +5,21 @@
   margin: 2rem auto;
   max-width: 1200px;
   padding: 1rem;
+  border: solid black; /*borrar*/
 }
+
+.productCont{
+  background: white;
+  padding: 1.2rem;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  text-align: center;
+  transition: transform 0.2s ease-in-out;
+  border: solid black;
+}
+.productCont:hover {
+  transform: translateY(-3px);
+   }
 
 .title {
     text-align: center;
