--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -1,29 +1,66 @@
 .productsGrid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
-  margin: 2rem auto;
-  max-width: 1200px;
-  padding: 1rem;
-  border: solid black; /*borrar*/
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin: 2rem auto;
+    max-width: 1200px;
+    padding: 1rem;
+    border: solid black;
+    /*borrar*/
 }
 
-.productCont{
-  background: white;
-  padding: 1.2rem;
-  border-radius: 12px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  text-align: center;
-  transition: transform 0.2s ease-in-out;
-  border: solid black;
+.productCont {
+    width: 17rem;
+    height: 31rem;
+    background: white;
+    padding: 1.5rem;
+    border-radius: 12px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    transition: transform 0.2s ease-in-out;
+    border: solid black;
 }
+
 .productCont:hover {
-  transform: translateY(-3px);
-   }
+    transform: translateY(-3px);
+}
 
 .title {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size:  2rem;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    color: #333;
+    min-height: 40px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
+.image {
+
+    height: 12rem;
+    object-fit: contain;
+    /* con esta propiedad se mantiene la relacion de aspecto y solo debo definir un valor */
+    margin: 0.5rem 0;
+    border: solid red
+}
+
+.price {}
+
+.description {
+    font-size: 0, 5rem;
+    margin-bottom: 0.5rem;
+    color: #333;
+    min-height: 40px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.category {}
+
+.button {}
