--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -18,7 +18,7 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
     transition: transform 0.2s ease-in-out;
-    border: solid black;
+    border: solid rgb(220, 20, 20);
 }
 
 .productCont:hover {
@@ -26,6 +26,7 @@
 }
 
 .title {
+    padding-top: 1rem;
     font-size: 1rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
@@ -36,23 +37,31 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+
 }
 
 .image {
-
-    height: 12rem;
+    display: flex;
+    justify-content: center;
+    max-height: 12rem;
+    max-width: 14rem;
     object-fit: contain;
-    /* con esta propiedad se mantiene la relacion de aspecto y solo debo definir un valor */
-    margin: 0.5rem 0;
+    margin: 0.5rem;
     border: solid red
 }
 
-.price {}
+.price {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #007bff;
+    margin: 0.3rem 0;
+}
 
 .description {
-    font-size: 0, 5rem;
+    padding-top: 1rem;
+    font-size: 0.9rem;
     margin-bottom: 0.5rem;
-    color: #333;
+    color: #767676;
     min-height: 40px;
     display: -webkit-box;
     -webkit-line-clamp: 3;
@@ -61,6 +70,25 @@
     text-overflow: ellipsis;
 }
 
-.category {}
+.category {
+    font-size: 0.85rem;
+    color: #ecae2a;
+    text-transform: uppercase;
+}
 
-.button {}
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 0.8rem;
+}
+
+.buttons button {
+    background: #007bff;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 6px;
+    color: white;
+    cursor: pointer;
+    transition: background 0.2s;
+}
