--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -26,7 +26,7 @@
 }
 
 .title {
-    padding-top: 1rem;
+    margin-top: 1rem;
     font-size: 1rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
@@ -37,17 +37,22 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    border: solid brown;
+}
 
+.contImage {
+    display: flex;
+    justify-content: center;
+    height: 12rem;
+    max-width: 14rem;
+    margin: 0.5rem;
+    border: solid red
 }
 
 .image {
-    display: flex;
-    justify-content: center;
-    max-height: 12rem;
-    max-width: 14rem;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
-    margin: 0.5rem;
-    border: solid red
 }
 
 .price {
@@ -79,8 +84,10 @@
 .buttons {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 10px;
     margin-top: 0.8rem;
+    border: solid green;
 }
 
 .buttons button {
@@ -91,4 +98,22 @@
     color: white;
     cursor: pointer;
     transition: background 0.2s;
+
+}
+
+.buttons button:hover {
+    background: #0056b3;
+}
+
+@media (max-width: 880px) {
+    .productsGrid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .productsGrid {
+        grid-template-columns: 1fr;
+
+    }
 }
