--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -5,8 +5,7 @@
     margin: 2rem auto;
     max-width: 1200px;
     padding: 1rem;
-    border: solid black;
-    /*borrar*/
+
 }
 
 .productCont {
@@ -18,7 +17,6 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
     transition: transform 0.2s ease-in-out;
-    border: solid rgb(220, 20, 20);
 }
 
 .productCont:hover {
@@ -37,7 +35,6 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    border: solid brown;
 }
 
 .contImage {
@@ -46,7 +43,6 @@
     height: 12rem;
     max-width: 14rem;
     margin: 0.5rem;
-    border: solid red
 }
 
 .image {
@@ -87,22 +83,34 @@
     align-items: center;
     gap: 10px;
     margin-top: 0.8rem;
-    border: solid green;
 }
 
-.buttons button {
-    background: #007bff;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 6px;
+
+.editButton {
+    font-size: 0.9rem;
+    background: #ffffff;
+    border: solid 0.1rem #007bff;
+    padding: 0.4rem 2rem;
+    border-radius: 8px;
+    color: #007bff;
+    cursor: pointer;
+    transition: transform 0.1s ease;
+}
+
+.deleteButton {
+    font-size: 0.9rem;
+    background: #ff0000;
+    border: solid 0.1rem #ff0000;
+    padding: 0.4rem 2rem;
+    border-radius: 8px;
     color: white;
     cursor: pointer;
-    transition: background 0.2s;
+    transition: transform 0.1s ease;
 
 }
 
 .buttons button:hover {
-    background: #0056b3;
+    transform: scale(1.05);
 }
 
 @media (max-width: 880px) {
