--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,10 +4,16 @@
     box-sizing: border-box;
 }
 
+
+
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    max-width: 1200px; 
+     width: 100%; 
+     margin: 0 auto; /*centre todo ver si esta bien */
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: #f4f4f4;
     color: #333;
+
 }
  
 a {
