--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -1,4 +1,11 @@
-.contHeader {
-background-color: rgb(244, 0, 41);
-
+.header {
+    width: 100%;
+    height: 1.5cm;
+    background-color: #eed47f;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+    box-sizing: border-box;
 }
+
