--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 1.5cm;
-    background-color: #eed47f;
+    background-color: #9ed99e;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -18,4 +18,20 @@
 
 .contLogo img {
     height: 80%;
+}
+
+.nav ul{
+    display: flex;
+    gap: 3rem;
+    border: solid blue;
+    list-style-type: none;
+    
+}
+
+.nav li {
+      color: white;
+    font-weight: 500;
+    border:  solid blue;
+    
+    
 }
