--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -1,13 +1,24 @@
-
 .contWelcome {
-    text-align: center  ;
+    text-align: center;
 }
-.contWelcome h1{
-    font-size: ;
+.contWelcome h1 {
+    font-size: 2.4rem;
+    padding: 1.5rem 0;
 }
+.contWelcome p {
+    padding: 0 0 1.5rem 0;
+    color: #767676;
+}
+.contWelcome h2 {
+    font-size: 2rem;
+    padding: 1.5rem 0;
+}
+
+/**/
+
 .contCaracteristicas {
     display: flex;
-  
+
     width: 100%;
     gap: 2rem;
 
@@ -15,14 +26,14 @@
 }
 
 .contCaracteristicas li {
-    
+
     background: white;
     padding: 1.5rem;
     border-radius: 12px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
     list-style-type: none;
-     transition: transform 0.2s ease-in-out;
+    transition: transform 0.2s ease-in-out;
 }
 
 .contCaracteristicas li:hover {
@@ -30,13 +41,13 @@
 }
 
 
-.contCaracteristicas h3{
+.contCaracteristicas h3 {
     font-size: 1.4rem;
-text-align: center;
+    text-align: center;
 }
 
-.contCaracteristicas p{
-text-align: center;
+.contCaracteristicas p {
+    text-align: center;
 }
 
 /**/
