--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -7,6 +7,9 @@
     justify-content: space-between;
     padding: 0 2rem;
     box-sizing: border-box;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 .contLogo {
