--- a/src/styles/pages/login.module.css
+++ b/src/styles/pages/login.module.css
@@ -8,3 +8,18 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
 }
+
+.contLogin h1{
+     font-size: 2.4rem;
+}
+.contCredenciales{
+    background: white;
+    padding: 1.5rem;
+    border-radius: 12px;
+    border: solid rgb(228, 228, 228) 1px;  /*LINEAS GRISES PARA DIVS*/
+    text-align: center;
+
+}
+.contInputs label{
+font-weight: bold;
+}
