--- a/src/styles/pages/login.module.css
+++ b/src/styles/pages/login.module.css
@@ -9,17 +9,26 @@
     text-align: left;
 }
 
-.contLogin h1{
-     font-size: 2.4rem;
+.contLogin h1 {
+    font-size: 2.4rem;
 }
-.contCredenciales{
+
+.contCredenciales {
     background: white;
     padding: 1.5rem;
     border-radius: 12px;
-    border: solid rgb(228, 228, 228) 1px;  /*LINEAS GRISES PARA DIVS*/
+    border: solid rgb(228, 228, 228) 1px;    /*LINEAS GRISES PARA DIVS*/
     text-align: center;
 
 }
-.contInputs label{
-font-weight: bold;
+
+.contInputs label {
+    font-weight: bold;
+}
+.contInputs input{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 5px;
+        border: solid rgb(228, 228, 228) 1px;   
 }
