--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 1.5cm;
-    background-color: #9ed99e;
+    background-color: #eb6427;
     display: flex;
     align-items: center;
     justify-content: space-between;
