creacion de useState para confirmPassword

--- a/src/styles/pages/login.module.css
+++ b/src/styles/pages/login.module.css
@@ -1,12 +1,13 @@
-.loginPage{
+.loginPage {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    
+
 }
+
 .contLogin {
-        margin: 2rem 0 2rem 0;
+    margin: 2rem 0 2rem 0;
     width: 28rem;
     height: 45rem;
     background: white;
@@ -38,7 +39,9 @@
     padding: 1.5rem;
     line-height: 1.8;
 }
-
+.contCredenciales p{
+    text-align: left;
+}
 .contInputs {
     margin: 2rem 0;
 }
@@ -56,7 +59,10 @@
     border: solid rgb(228, 228, 228) 1px;
     padding: 1rem;
     margin: 0.5rem 0;
-
+}
+.contInputs input::placeholder{
+    color: rgb(147, 147, 147);
+    font-size: 1remx;
 
 }
 
