--- a/src/styles/pages/register.module.css
+++ b/src/styles/pages/register.module.css
@@ -50,7 +50,14 @@
     color: white;
     transition: transform 0.2s ease-in-out;
 }
+.contButton:hover{
+    transform: translateY(-1px);
+    background-color: #e04a04;
+    cursor: pointer;
+}
 
-.contWordLogin{
-
+.contWordLogin {
+    font-weight: bold;
+    color: #e04a04;
+    cursor: pointer;
 }
