--- a/src/styles/pages/aboutUs.module.css
+++ b/src/styles/pages/aboutUs.module.css
@@ -1,3 +1,41 @@
-    
-    
-    
+.contAboutUs {
+    display: flex;
+    width: 100%;
+    gap: 2rem;
+}
+
+.contAboutUs div {
+    background: white;
+    padding: 1.5rem;
+    border-radius: 12px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    list-style-type: none;
+    transition: transform 0.2s ease-in-out;
+}
+
+.contAboutUs div:hover {
+    transform: translateY(-3px);
+
+}
+
+.contTecnicas {
+
+    display: flex;
+
+}
+
+.contTecnicas ul {
+    background: white;
+    padding: 1.5rem;
+    border-radius: 12px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    list-style-type: none;
+    transition: transform 0.2s ease-in-out;
+}
+
+.contTecnicas ul:hover {
+    transform: translateY(-3px);
+
+}
